# regkey

./: .gitignore  Cargo.toml  README.md
contrib/: regkey.service
src/: bigrams.rs  cli.rs  db.rs  main.rs  record.rs  report.rs  trigrams.rs
src/window/: hyprland.rs  mod.rs  null.rs  sway.rs
