[package]
name = "regkey"
version = "0.1.0"
edition = "2024"

[dependencies]
evdev      = "0.13"
rusqlite   = { version = "0.38", features = ["bundled"] }
clap       = { version = "4.5",  features = ["derive"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
ctrlc      = "3"
